# conversation-simulator

./: .gitignore  .pre-commit-config.yaml  DEBUG_SETUP.md  ENHANCED_CONVERSATION_STORAGE.md  README.md  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  env.example  setup-openai.sh  test-setup.sh
backend/: CODIGO_OBSOLETO_ANALISIS.md  Dockerfile  Dockerfile.dev  Dockerfile.integration-test  Dockerfile.test  ENV_CONFIG_README.md  coverage.xml  docker.env.example  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_voice_conversation.py
backend/config/: .gitignore  DATABASE_URLS.md  README.md  conversation_instructions.yaml.example
backend/docs/: AI_PROVIDER_INTEGRATION.md  README.md  SEMANTIC_VALIDATION.md  TELEMETRY.md
backend/docs/config/: CONVERSATION_CONFIGURATION.md  README.md
backend/docs/config/examples/: identity_example.yaml  industry_example.yaml  psychology_example.yaml  situation_example.yaml
backend/examples/: example_5layer_usage.py
backend/scripts/: migrate_database.py
backend/src/: main.py
backend/src/analysis/application/handlers/: query_handlers.py  (+1 more)
backend/src/analysis/domain/: exceptions.py
backend/src/api/: gateway.py
backend/src/api/routes/: analysis.py  audio.py  contexts.py  conversation.py  conversation_analysis.py  enhanced_conversation.py  persona.py  prompt.py  websocket.py  websocket_helpers.py
backend/src/audio/: __init__.py
backend/src/audio/application/: __init__.py
backend/src/audio/domain/: __init__.py
backend/src/audio/infrastructure/: __init__.py
backend/src/conversation/domain/: exceptions.py
backend/src/persona/domain/: exceptions.py
backend/src/shared/application/: prompt_service.py
backend/src/shared/domain/: events.py  exceptions.py  prompt_builder.py  schemas.py  semantic_validator.py  value_objects.py
backend/tests/: RUN_5LAYER_TESTS.md  test_5layer_system.py  test_all_value_objects.py  test_analysis_domain_service.py  test_analysis_entities_coverage.py  test_analysis_service_coverage.py  test_analysis_structure.py  test_api_routes_audio.py  test_api_routes_basic.py  test_api_routes_prompt.py  test_application_services_coverage.py  test_audio_converter_expanded.py  test_audio_converter_service.py  test_audio_entities_coverage.py  test_audio_service.py  test_audio_service_simple.py  test_basic_functionality.py  test_chunk_aggregation.py  test_config_coverage.py  test_conversation_application_service.py  test_conversation_domain_service.py  test_conversation_entity.py  test_conversation_repository_coverage.py  test_database_config_coverage.py  test_domain_value_objects.py  test_dtos_coverage.py  test_enhanced_conversation_storage.py  test_enhanced_message_entity.py  test_event_bus_coverage.py  test_exceptions_coverage.py  test_external_apis_coverage.py  test_file_repositories_comprehensive.py  test_gemini_voice_service.py  test_imports.py  test_message_entities_comprehensive.py  test_message_processing_expanded.py  test_openai_voice_conversation_service.py  test_persona_entity_coverage.py  test_persona_integration.py  test_persona_repository_coverage.py  (+18 more)
(+179 files in other folders)
